<resources>
    <string name="app_name">calcApp</string>
    <string name="clear">C</string>
    <string name="leftBracket">(</string>
    <string name="rightBracket">)</string>
    <string name="divSymbol">÷</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="multipSymbol">×</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="minusSymbol">-</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="plusSymbol">+</string>
    <string name="num0">0</string>
    <string name="decimalSymbol">.</string>
    <string name="equalSymbol">=</string>
</resources>