<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/window_background"
    tools:context=".MainActivity">

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="bottom"
        android:background="@color/io_background"
        android:padding="30dp">

        <TextView
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="30sp"
            android:textColor="@color/white"
            tools:text="5+10-3" />

        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="50sp"
            android:textColor="@color/green"
            tools:text="12" />

    </LinearLayout>
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_clear"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/clear"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_bracket_left"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/leftBracket"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_bracket_right"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/rightBracket"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_div"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/divSymbol"/>

        </TableRow>
        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_7"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/num7"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_8"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/num8"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_9"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/num9"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_multiply"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/multipSymbol"/>

        </TableRow>

        <TableRow>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_4"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            style="@style/Button_Style"
            android:text="@string/num4"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_5"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            style="@style/Button_Style"
            android:text="@string/num5"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_6"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            style="@style/Button_Style"
            android:text="@string/num6"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_minus"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            style="@style/Button_Style"
            android:text="@string/minusSymbol"/>

    </TableRow>

    <TableRow>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_1"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            style="@style/Button_Style"
            android:text="@string/num1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_2"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            style="@style/Button_Style"
            android:text="@string/num2"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_3"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            style="@style/Button_Style"
            android:text="@string/num3"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_plus"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            style="@style/Button_Style"
            android:text="@string/plusSymbol"/>

    </TableRow>

    <TableRow>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_0"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            style="@style/Button_Style"
            android:text="@string/num0"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_decimal"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            style="@style/Button_Style"
            android:text="@string/decimalSymbol"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_equals"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            style="@style/Button_Style"
            android:text="@string/equalSymbol"/>


    </TableRow>

    </TableLayout>

</LinearLayout>